# goit-algo-hw-06

./: functionality_for_bot.py  pyproject.toml
