[tool.poetry]
name = "goit-algo-hw-06"
version = "0.1.0"
description = ""
authors = ["Vitaliy-datascientist <vitaliy.dayneko2410@gmail.com>"]
packages = [{'include' = 'functionality_for_bot'}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
